--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="main_screen_layout_padding">5dp</dimen>
     <dimen name="default_button_text_size">22sp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
